@@ -34,8 +34,6 @@ import de.tum.in.www1.artemis.domain.lecture.AttachmentUnit;
 import de.tum.in.www1.artemis.repository.AttachmentUnitRepository;
 import de.tum.in.www1.artemis.repository.SlideRepository;
 import de.tum.in.www1.artemis.service.LectureUnitProcessingService;
-import de.tum.in.www1.artemis.user.UserUtilService;
-import de.tum.in.www1.artemis.util.RequestUtilService;
 import de.tum.in.www1.artemis.web.rest.dto.LectureUnitInformationDTO;
 import de.tum.in.www1.artemis.web.rest.dto.LectureUnitSplitDTO;
 
@@ -48,12 +46,6 @@ class AttachmentUnitsIntegrationTest extends AbstractSpringIntegrationIndependen
 
     @Autowired
     private SlideRepository slideRepository;
-
-    @Autowired
-    private RequestUtilService request;
-
-    @Autowired
-    private UserUtilService userUtilService;
 
     @Autowired
     private LectureUtilService lectureUtilService;
@@ -283,7 +275,7 @@ class AttachmentUnitsIntegrationTest extends AbstractSpringIntegrationIndependen
         assertThat(attachmentUnitList).isEqualTo(attachmentUnits);
 
         // first unit
-        String attachmentPathFirstUnit = attachmentUnitList.get(0).getAttachment().getLink();
+        String attachmentPathFirstUnit = attachmentUnitList.getFirst().getAttachment().getLink();
         byte[] fileBytesFirst = request.get(attachmentPathFirstUnit, HttpStatus.OK, byte[].class);
 
         try (PDDocument document = Loader.loadPDF(fileBytesFirst)) {
